--- a/school-site/index.html
+++ b/school-site/index.html
@@ -21,8 +21,6 @@ body {
     min-width:56.25rem;
 }
 
-/* Layout */
-
 main {
     overflow:auto;
     min-width:45rem;
@@ -68,8 +66,6 @@ section, aside, nav, footer {
   padding: .5rem;
 }
 
-/* header and footer */
-
 header, footer {
   border-top: .125rem solid #33658A;
   border-bottom: .125rem solid #33658A;
@@ -78,15 +74,9 @@ header, footer {
 /* ------ START WRITING YOUR CODE BELOW THIS LINE ------ */
 
 
-
-/* NOTE: While you will be using some of the same CSS properties, the VALUES 
-   may need to be different in order to style the page correctly. */
-
-
-
 /* Imported Typfaces */
 @font-face {
-    font-family: Josefins;
+    font-family: Josefinslab;
     src: url(school-site/fonts/josefinslab-regular.ttf) format ('truetype');
     font-weight: normal;
     font-style: normal;
@@ -100,10 +90,10 @@ header, footer {
 
 /* Typography Styles */
 html {
-    font-family: Montserrat;
+    font-family: Montserrat, Arial, Helvetica, sans-serif;
 }
 h1 {
-    font-family: Josefinslab;
+    font-family: Josefinslab, Arial, Helvetica, sans-serif;
     letter-spacing: .125rem;
     text-align: center;
     font-size: 3.75rem;
@@ -112,65 +102,94 @@ h1 {
 }
 h2 {
     letter-spacing: .125rem;
-    font-family: Montserrat;
+    font-family: Josefinslab, Arial, Helvetica, sans-serif;
     font-size: 1.5rem;
 
 }
 h2 + p {
-    letter-spacing: .125rem;
+    font-family: Josefinslab, Arial, Helvetica, sans-serif;
+    text-indent: 1.5rem;
 }
 p {
-
+    font-size: .75rem;
+    letter-spacing: .031rem;
+    word-spacing: .125rem;
 }
 li {
-
+    font-size: .75rem;
+    letter-spacing: .031rem;
+    word-spacing: .125rem;
 }
 figcaption {
-
+    font-size: .75rem;
+    margin-bottom: 2rem;
 }
 
 
 /* Link Styling */
 
-a{
-
+a:{
+    outline: none;
 }
 a:link,
-a:hover {
-
+a:visited, {
+    outline: none;
+    color: #33658A;
 }
 a:focus,
 a:hover {
-
+    outline: none;
+    text-decoration: none;
 }
-
 
 /* List Styling */
 ul {
-
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    margin-left: 0rem;
+    margin-right: 0rem;
+    list-style-type: square;
 }
 ol {
-
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    margin-left: 0rem;
+    margin-right: 0rem;
+    list-style-type: lower-alpha;
 }
 .long-list a:hover {
-
+    text-transform: uppercase;
 }
 /* Navigation Menu */
 nav {
-
+    padding: 0rem;
+    margin-top: .25rem;
 }
 nav a {
-
+    text-decoration: none;
+    width: 100%;
+    line-height: 3;
+    text-align:center;
+    font-size: 1.125rem;
+    margin-bottom: 1.5rem;
+    border: solid;
+    border-width: .063rem;
+    border-color: #33658A;
 }
 nav a:focus,
 nav a:hover {
+    color: #fff;
+    background-color: #33658A;
 
 }
 nav a:active {
-
+color: #fff;
+background-color: #000;
 }
 /* Footer Styles */
-footer {}
+footer {
+    text-align: center;
+}
 
 </style>
     </head>
