--- a/school-site/index.html
+++ b/school-site/index.html
@@ -90,23 +90,23 @@ header, footer {
 
 /* Typography Styles */
 html {
-    font-family: Montserrat, sans-serif
+    font-family: Montserrat;
+}
 h1 {
-    font-family: Josefinslab, sans-serif;
+    font-family: Josefinslab;
     letter-spacing: .125rem;
     text-align: center;
     font-size: 3.75rem;
     margin: 1.125rem;
-
 }
 h2 {
     letter-spacing: .125rem;
-    font-family: Josefinslab, sans-serif;
+    font-family: Josefinslab;
     font-size: 1.5rem;
 
 }
 h2 + p {
-    font-family: Josefinslab, sans-serif;
+    font-family: Josefinslab;
     text-indent: 1.5rem;
 }
 p {
