--- a/wanted-poster/wanted-poster/index.html
+++ b/wanted-poster/wanted-poster/index.html
@@ -18,7 +18,7 @@
             <section>
                 <h2>$500,000 Reward</h2>
                 <figure>
-                    <img src="wanted-poster/wanted-poster/images/j-dawg.jpg" alt="cute dog mug shot">
+                    <img src="wanted-poster/wanted-poster/images/j-dawg.jpg">
                     <figcaption>
                     <a href="https://www.flickr.com/photos/christopherf/12476805405/sizes/h/">"J-Dawg"</a> by 
                     <a href="https://www.flickr.com/photos/christopherf/">Christopher</a>
