--- a/wanted-poster/wanted-poster/index.html
+++ b/wanted-poster/wanted-poster/index.html
@@ -18,7 +18,7 @@
             <section>
                 <h2>$500,000 Reward</h2>
                 <figure>
-                    <img src="wanted-poster/wanted-poster/images/j-dawg.jpg">
+                    <img src="/Users/annarodriguez/Documents/Github /allrodz93.github.io/wanted-poster/wanted-poster/images/j-dawg.jpg">
                     <figcaption>
                     <a href="https://www.flickr.com/photos/christopherf/12476805405/sizes/h/">"J-Dawg"</a> by 
                     <a href="https://www.flickr.com/photos/christopherf/">Christopher</a>
@@ -26,7 +26,7 @@
                 </figcaption>
                 </figure>
                 <p>
-                    James Markus is wanted for crimes of heartwarming cuteness and is a known associate of Jake "Bubbles" Benson, Deon "Runny Mustard" Summers, and Davey Stank. James is considered armed and dangerous.
+                    <strong>Markus is wanted for crimes of heartwarming cuteness and is a known associate of Jake "Bubbles" Benson, Deon "Runny Mustard" Summers, and Davey Stank. James is considered armed and dangerous.</strong> 
                 </p>
             </section>
             <section>
