--- a/wanted-poster/wanted-poster/index.html
+++ b/wanted-poster/wanted-poster/index.html
@@ -18,7 +18,7 @@
             <section>
                 <h2>$500,000 Reward</h2>
                 <figure>
-                    <img src="/Users/annarodriguez/Documents/Github /allrodz93.github.io/wanted-poster/wanted-poster/images/j-dawg.jpg">
+                    <img src="/wanted-poster/images/j-dawg.jpg">
                     <figcaption>
                     <a href="https://www.flickr.com/photos/christopherf/12476805405/sizes/h/">"J-Dawg"</a> by 
                     <a href="https://www.flickr.com/photos/christopherf/">Christopher</a>
