--- a/wanted-poster/wanted-poster/index.html
+++ b/wanted-poster/wanted-poster/index.html
@@ -26,7 +26,7 @@
                 </figcaption>
                 </figure>
                 <p>
-                    <strong>Markus is wanted for crimes of heartwarming cuteness and is a known associate of Jake "Bubbles" Benson, Deon "Runny Mustard" Summers, and Davey Stank. James is considered armed and dangerous.</strong> 
+                    Markus is wanted for crimes of heartwarming cuteness and is a known associate of Jake "Bubbles" Benson, Deon "Runny Mustard" Summers, and Davey Stank. James is considered armed and dangerous.
                 </p>
             </section>
             <section>
