--- a/wanted-poster/index.html
+++ b/wanted-poster/index.html
@@ -3,9 +3,12 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="author" content="Anna Rodriguez">
-        <title>Wanted | Jame Markus</title>
+        <meta name="author" content="Anna Rodriguez ">
         <link rel="stylesheet" href="css/style.css">
+        
+<!-- Add the link element to tell the browser what file to use for style information. -->
+        
+        <title>Wanted | Jame Markus</title>
     </head>
     <body>
         <main>
@@ -18,7 +21,7 @@
             <section>
                 <h2>$500,000 Reward</h2>
                 <figure>
-                    <img src="/wanted-poster/images/j-dawg.jpg">
+                    <img src="images/j-dawg.jpg" alt="cute dog mug shot">
                     <figcaption>
                     <a href="https://www.flickr.com/photos/christopherf/12476805405/sizes/h/">"J-Dawg"</a> by 
                     <a href="https://www.flickr.com/photos/christopherf/">Christopher</a>
@@ -26,7 +29,7 @@
                 </figcaption>
                 </figure>
                 <p>
-                    Markus is wanted for crimes of heartwarming cuteness and is a known associate of Jake "Bubbles" Benson, Deon "Runny Mustard" Summers, and Davey Stank. James is considered armed and dangerous.
+                    James Markus is wanted for crimes of heartwarming cuteness and is a known associate of Jake "Bubbles" Benson, Deon "Runny Mustard" Summers, and Davey Stank. James is considered armed and dangerous.
                 </p>
             </section>
             <section>
