--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ footer a:hover {
             <ul>
                 <li><a href="letter-markup">Letter Markup</a></li>
                 <li><a href="planets-table/planets-table/index.html">Planets Table</a></li>
-                <li><a href="https://allrodz93.github.io/wanted-poster/index.html">Wanted Poster</a></li>
+                <li><a href="wanted-poster/wanted-poster/css/index.html">Wanted Poster</a></li>
                 <li><a href="school-site">School Site</a></li>
                 <li><a href="blog">Blog</a></li>
             </ul>
